<resources>
    <string name="app_name">Muzic</string>
    <string name="home_nav">Home</string>
    <string name="music_nav">Music</string>
    <string name="setting_nav">Setting</string>
    <string name="searchHint">Search</string>
    <string name="hotRecommend">Hot Recommended</string>
    <string name="playlist">Playlist</string>
    <string name="viewAll">View All</string>
    <string name="recentPlay">Recently Played</string>

    <!--    side bar-->
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="themes">Themes</string>
    <string name="ringtoneCutter">Ringtone Cutter</string>
    <string name="sleepTimer">Sleep timer</string>
    <string name="equiliser">Equiliser</string>
    <string name="driveMode">Drive Mode</string>
    <string name="hiddenFolders">Hidden Folders</string>
    <string name="scanMedia">Scan Media</string>

    <!--    music-->
    <string name="all_songs">All Songs</string>
    <string name="playlists">Playlists</string>
    <string name="genres">Genres</string>

    <!--    Playlists-->
    <string name="my_top_tracks">My Top Tracks</string>
    <string name="lastest_added">Lastest Added</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="song_my_top_tracks">100 Songs</string>
    <string name="song_latest_added">323 Songs</string>
    <string name="song_history">450 Songs</string>
    <string name="song_favourites">966 Songs</string>
    <string name="my_playlists">My Playlists</string>

    <!--    song details-->
    <string name="album_details">Album Details</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="favourite">Add to Favourites</string>

    <!--    album details-->
    <string name="history_album">History</string>

    <!--    artist details-->
    <string name="artist_details">Artist Details</string>
    <string name="followers">Followers</string>
    <string name="listeners">Listeners</string>
    <string name="follow">Follow</string>
    <string name="top_album">Top Albums</string>
    <string name="top_song">Top Songs</string>
    <string name="album_artist">Albums</string>
    <string name="song_artist">Songs</string>

    <!--    now playing-->
    <string name="now_playing">Now Playing</string>
    <string name="playlist_now_playing">Playlist</string>
    <string name="shuffle_now_playing">Shuffle</string>
    <string name="repeat_now_playing">Repeat</string>
    <string name="eq_now_playing">EQ</string>
    <string name="favourites_now_playing">Favourites</string>
    <string name="album_now_playing">Album - Dangerous</string>

    <!--    setting-->
    <string name="setting">Settings</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    diaglog playlist creation-->
    <string name="create_playlists">Create Playlist</string>
    <string name="hint_create_playlist">Playlist Name ...</string>
    <string name="ok_create_playlist">OK</string>
    <string name="cancel_create_playlist">CANCEL</string>

</resources>