<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_create_playlist"
    android:layout_width="match_parent"
    android:layout_height="@dimen/create_dialog_height"
    android:layout_margin="@dimen/margin_layout"
    android:background="@drawable/add_playlists"
    android:padding="@dimen/padding_layout"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_create_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_playlists"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_create_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:hint="@string/hint_create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_playlist" />

    <TextView
        android:id="@+id/btn_oke_create_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_marginEnd="@dimen/padding_layout"
        android:clickable="true"
        android:text="@string/ok_create_playlist"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_size_create_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_create_playlist" />

    <TextView
        android:id="@+id/btn_cancle_create_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_marginEnd="@dimen/padding_layout"
        android:clickable="true"
        android:text="@string/cancel_create_playlist"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_size_create_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_oke_create_playlist"
        app:layout_constraintTop_toBottomOf="@id/edt_create_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>
