<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/header_nav"
    android:orientation="vertical"
    android:padding="@dimen/padding_header_nav">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/padding_header_nav"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_num_songs"
                    style="@style/text_header_nav"/>
                <TextView
                    style="@style/text_header_nav"
                    android:text="@string/songs"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_num_albums"
                    style="@style/text_header_nav"/>
                <TextView
                    style="@style/text_header_nav"
                    android:text="@string/albums"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/header_num_artists"
                    style="@style/text_header_nav"/>
                <TextView
                    style="@style/text_header_nav"
                    android:text="@string/artists"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>