<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".nav.settings.SettingFragment">

    <LinearLayout
        android:id="@+id/linear_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_burger_menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_linear"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/text_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_layout"
                android:src="@drawable/ic_display" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_layout"
                android:src="@drawable/ic_audio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audio" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_layout"
                android:src="@drawable/ic_headset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/headset" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_layout"
                android:src="@drawable/ic_lockscreen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lockscreen" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_layout"
                android:src="@drawable/ic_advanced" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_layout"
            android:paddingBottom="@dimen/padding_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_layout"
                android:src="@drawable/ic_other" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

                <View
                    style="@style/divider"
                    android:layout_marginTop="@dimen/margin_divider" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>